--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <p style="color: red">Text</p>
     <h1 style="color: blue">Heading</h1>
+    <h2 style="color: rgb(186, 21, 65)">This is rgb color</h2>
+    <h2 style="color: #6a5aff">This is hex</h2>
+    <h3 style="color: hsl(0, 100%, 50%)">This is hsl</h3>
   </body>
 </html>
-<!-- need to commit-->
