--- a/index.html
+++ b/index.html
@@ -36,9 +36,46 @@
       style="
         background-image: url('https://placekitten.com/200/300');
         height: 200px;
+        background-repeat: no-repeat;
+      "
+    ></div>
+    <div style="background: red">this is div</div>
+    <p style="border-style: dashed; border-width: 10px; border-color: #6a5aff">
+      dashed
+    </p>
+    <p style="border-style: solid; border-width: thick; border-color: aqua">
+      solid
+    </p>
+    <p style="border-style: double; border-width: medium; border-color: beige">
+      double
+    </p>
+    <p style="border: 5px solid green; border-radius: 10px">
+      shorthand border property
+    </p>
+    <div
+      style="
+        background-color: lightblue;
+
+        border: 1px solid black;
+        margin-top: 100px;
+        margin-bottom: 150px;
+        margin-left: 150px;
+        margin-right: 100px;
       "
     >
-      This is image div
+      This is margin
     </div>
+    <div
+      style="background-color: #6a5aff; border: 1px solid black; margin: 100px"
+    >
+      Margin shorthand
+    </div>
+    <div style="border: 1px solid black; padding: 100px">Padding</div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   </body>
 </html>
+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
