--- a/class/index.html
+++ b/class/index.html
@@ -199,7 +199,7 @@
       <li><a href="#">JavaScript</a></li>
       <li><a href="#">Node</a></li>
     </ul>
-<!-- <a href="#">First</a>
+<!-- Hello <a href="#">First</a>
 <a href="#">Second</a>
 <h3>This is heading</h3>
 <a href="#">Hello</a> -->
