--- a/Assignments05/index.html
+++ b/Assignments05/index.html
@@ -4,14 +4,161 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1>ABC PQR</h1>
-    <div>Email: abc.pqr@gmail.com |</div>
-    <div>Phone:222-222-2222</div>
-    <p>
-      Front-End Developer I am a front-end developer with more than 3 years of
-      experience writing html, css,js. Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Assumenda, recusandae.
-    </p>
+  <body style="background-color:aliceblue; background-size:cover">
+    <div style="background-color: white; height:1100px;width:650px;
+    margin: 55px;
+    padding: 20px;
+  
+    ">
+      <header>
+        <p><b>ABC</b> <span style="font-family:'Times New Roman', Times, serif;">PQR</span></p>
+      </header>
+      <footer><span style="opacity: 0.6">Email:</span>abc.pqr@gmail.com |</footer>
+      <footer> <span style="opacity: 0.6 ;">Phone:</span> 222-222-2222</footer>
+
+      <div>
+        <b style="border-bottom: 1px solid black;line-height: 30px;"> Front-End Developer</b> I am
+        a front-end developer with more than 3 years of experience writing html,
+        css,js. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Assumenda, recusandae.
+      </div>
+      <main>
+        <section>
+          <article >
+            <h5>EXPERIENCE</h5>
+            <table>
+              <tr>
+                <th>
+                  lorem
+                </th>
+                <th>
+                  Fr developer
+                </th>
+              </th>
+              <tr>
+                <td>San Fr,CA</td>
+                <td>did This and that</td>
+              </tr>
+              <tr>
+                <td>Jan2011-Feb2015</td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <th>
+                  lorem
+                </th>
+                <th>
+                  Fr developer
+                </th>
+              </th>
+              <tr>
+                <td>San Monica,CA</td>
+                <td>did This and that</td>
+              </tr>
+              <tr>
+                <td>Jan2011-Feb2015</td>
+              </tr>
+            </table>
+          </article>
+          <article>
+            <h5>EDUCATION</h5>
+            <table>
+              <tr>
+                <th>Sample Institute of technology</th>
+                <th>Fr developer</th>
+              </tr>
+              <tr>
+                <td>San Fr,CA</td>
+                <td>did this and that</td>
+              </tr>
+              <tr>
+                <td>Jan2011-Feb2015</td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <th>
+                  lorem
+                </th>
+                <th>
+                  Fr developer
+                </th>
+              </tr>
+              <tr>
+                <td>San Fr,CA</td>
+                <td>did This and that</td>
+              </tr>
+              <tr>
+                <td>Jan2011-Feb2015</td>
+              </tr>
+            </table>
+          </article>
+        </section>
+
+          <section>
+          <article >
+            
+            <div>
+              <h5 style="margin-top: 0px;">PROJECTS</h5>
+              <h6>DSP</h6>
+           <p style="margin-top:-25px;">I am
+            a front-end developer with more than 3 years of experience writing html,
+            css,js. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Assumenda, recusandae.</p>
+            </div>
+          </article>
+          <br>
+          <article>
+            <div style="margin-top:0px">
+            <h6>DSP</h6>
+            <p style="margin-top:-25px;">I am
+              a front-end developer with more than 3 years of experience writing html,
+              css,js. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Assumenda, recusandae.</p>
+            </div>
+          </article>
+        </section>
+        <section>
+          <article>
+            <h5 style="margin-bottom: -25px;">SKILLS</h5>
+          <div style="margin-top:0px;">
+            <h6 style="margin-bottom: 0px;">Javascript</h6>
+            <h6>CSS</h6>
+          </div>
+          </article>
+          <article>
+            <h5 style="margin-top:0px;margin-bottom:-5px;">INTERESTS</h5>
+            <p style="margin-bottom:40px ;">Reading programming</p>
+          </article>
+        </section>
+      </main>
+      <div style="float:right;position: absolute;right: 200px; bottom: -300px;">
+      <div class="radio1">
+      <label  for="radio" ></label>
+      <input style=" opacity: .9;" type="radio" id="radio" name="radio" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio" disabled >
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio" disabled>
+    </div>
+    <div class="radio2">
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio2" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio2" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio2" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio2" disabled>
+      <label for="radio"></label>
+      <input type="radio" id="radio" name="radio2" disabled>
+    </div>
+  </div>
+    </div>
   </body>
 </html>
