--- a/class/p.html
+++ b/class/p.html
@@ -7,13 +7,13 @@
   </head>
   <body>
 
-    <div></div>
+    <!-- <div></div> -->
     
-    <!-- <div id="div1">liner</div>
+    <div id="div1">liner</div>
     <div id="div2">ease</div>
     <div id="div3">ease-in</div>
     <div id="div4">ease-out</div>
-    <div id="div5">ease-in-out</div> -->
+    <div id="div5">ease-in-out</div>
 
     <!-- <div class="container">
       <div class="black-box">Black-box</div>
