--- a/Assignments06/index.html
+++ b/Assignments06/index.html
@@ -144,7 +144,7 @@
       
       <input type="radio" id="radio" checked >
       <label for="radio"></label>
-      <label for="radio"></label>
+      <label for="radio"></label> b 
       <input type="radio" id="radio" readonly>
       <label for="radio"></label>
       <input type="radio" id="radio"readonly >
