--- a/Assignment_JS/index.html
+++ b/Assignment_JS/index.html
@@ -52,7 +52,7 @@
 
         return "No such name found ";
       }
-      console.log(findContact("Lucy", "likes"));
+      console.log(findContact("Lucy", "phoneNo"));
     </script>
   </body>
 </html>
