--- a/JS/assignment.html
+++ b/JS/assignment.html
@@ -94,3 +94,31 @@
     10.Toggle class header
 
 -->
+
+<!-- //Assignment03//
+  
+  
+  //Assignment04//
+
+
+1.Create an array with multiple object named employee;
+[
+{}
+,
+{}
+]
+2.Object property : 
+  id (unique)
+  name: string 
+  age:number
+  designation :string
+  salary :number
+  phone: number
+
+3.Filter all developer 
+4.Filter all emplyoee below age 30
+5.Find employee below age 30 and salary above 70000
+6.Filter all accountants
+7.Find designation accountant and salary below 40000
+8.Find the employee whose id is 5
+-->
