--- a/JS/assignment.html
+++ b/JS/assignment.html
@@ -122,3 +122,33 @@
 7.Find designation accountant and salary below 40000
 8.Find the employee whose id is 5
 -->
+
+<!-- 
+
+//stopwatch
+
+
+Constructor Function stopwatch
+private properties: 
+      - startTime
+      - endTime
+      - duration
+Methods:////button
+    - start
+    - stop
+    - reset
+
+    13:25
+    13:28
+
+    180s
+    60s
+
+
+
+
+
+
+
+
+ -->
