--- a/JS/index.html
+++ b/JS/index.html
@@ -88,7 +88,7 @@
         today: { max: maxtemp, min: min },
       } = obj;
       console.log(maxtemp, min);
-
+      //Fatima Khaled
       //spread : ... if we passing precreated array otherwise like rest
 
       //let numberArray = [1, 2, 3, 4, 5];
