--- a/JS/oop.html
+++ b/JS/oop.html
@@ -9,6 +9,86 @@
     this - bounded to only in object property
     -->
     <script>
+      //class
+
+      class Rectangle {
+        constructor(width, height, color) {
+          console.log("class created");
+          this.width = width;
+          this.height = height;
+          this.color = color;
+        }
+        getArea() {
+          return this.width * this.height;
+        }
+      }
+
+      let rectangle1 = new Rectangle(10, 20, "red");
+      console.log(rectangle1.getArea());
+      let rectangle2 = new Rectangle(15, 24, "blue");
+      console.log(rectangle2.getArea());
+
+      function Circle(radius) {
+        let color = "red";
+        this.radius = radius;
+        let defaultValue = 3.14;
+        this.draw = function () {
+          console.log("new function");
+        };
+        Object.defineProperty(this, "defaultVlaue", {
+          get: function () {
+            console.log(defaultValue);
+          },
+          set: function (val) {
+            defaultValue = val;
+          },
+        });
+      }
+      const circle2 = new Circle(1);
+      circle2.radius = 10;
+      console.log(circle2.defaultValue);
+      circle2.defaultValue = 100;
+      console.log(circle2.defaultValue);
+
+      circle2.draw();
+      //let/var/const make value private in func
+      function Circle(radius) {
+        let color = "red";
+        this.radius = radius;
+        let defaultValue = 3.14;
+        let complexFunction = function () {
+          //code
+        };
+        this.draw = function () {
+          complexFunction();
+          console.log("new function");
+        };
+      }
+      //const circle2 = new Circle(1);
+      console.log(circle2);
+      circle2.draw();
+
+      //factories
+
+      function circle(radius) {
+        return {
+          radius: radius,
+          draw: function () {
+            console.log("1");
+          },
+        };
+      }
+      const circle1 = circle(1);
+      // circle1.draw();
+
+      //object oriented programming -  oop
+      //1 encapsulation
+      //2 abstraction
+      //3 inheritance
+      //4 polymorphism
+
+      //procedural
+
       const video = {
         title: "title",
         play() {
